service-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceone
  labels:
    app: serviceone
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: serviceone
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceone
  namespace: default
  labels:
    app: serviceone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceone
  template:
    metadata:
      labels:
        app: serviceone
    spec:
      containers:
      - name: serviceone
        image: ingjavierr/microservicio-one:v2
        ports:
        - containerPort: 8090
