nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
  name: external-auth-oauth2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - bockend:
          service:
            service: alertmanager-operated
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
